<resources>
    <string name="app_name">POSMS</string>
    <string name="title_account">Account</string>
    <string name="title_category">Category</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_notifications" translatable="false">Notifications</string>

    <!-- Product Page -->
    <string name="back">Back</string>
    <string name="scan_table_code">Scan Table Code</string>
    <string name="account_table_no">Table No. :</string>
    <string name="account_unbind_table">Unbind Table</string>
    <string name="account_logout">Logout</string>
    <string name="account_action_sign_in">Login</string>
    <string name="login_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>

    <!-- Register Page-->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="register">Register</string>
    <string name="register_username">Username</string>
    <string name="register_name">Name</string>
    <string name="clear_btn">Clear</string>
    <string name="login">Login</string>

</resources>
